# Volsweeper

./: .gitignore  CMakeLists.txt  README.md  \  compile_commands copy.json  gameplan.txt  milestones-mf-rl-hv-bd.txt  test  test.cpp  timelog.txt
.cache/clangd/index/: Angle.hpp.723A10BF0228664E.idx  Angle.inl.3512BE2B1DB1CCAD.idx  BlendMode.hpp.234F86BCF4F716C6.idx  CircleShape.hpp.1256CB126E105CA8.idx  Clipboard.hpp.6A782A4FDD9F4EDC.idx  Clock.hpp.4CAE8ABC2F346237.idx  Color.hpp.7355B29A266B6364.idx  Color.inl.6420C63A102BBB56.idx  Config.hpp.8D02DD51D97FED1F.idx  Context.hpp.AAE1E2912841367F.idx  ContextSettings.hpp.65D32E222D87A6E0.idx  ConvexShape.hpp.C6ECD45265876E93.idx  CoordinateType.hpp.2A36CAA317868F5F.idx  Cursor.hpp.91A56D93BAAE42FD.idx  Drawable.hpp.988A33BF11255CA8.idx  Err.hpp.11ECEFC863D1420F.idx  Event.hpp.96F2476F486C3397.idx  Event.inl.E97FA1FCB59DD1DD.idx  Exception.hpp.840FEDD2891672E1.idx  Export.hpp.6D128AA8C12FD9C9.idx  Export.hpp.E0DCF5B0A5D5F9B5.idx  Export.hpp.EF1C5868E9FB7A63.idx  FileInputStream.hpp.08CEFE18D503870C.idx  Font.hpp.AE96E3D783151B01.idx  GlResource.hpp.FC2B5AAD0A69DB17.idx  Glsl.hpp.0E799F04C35DFB75.idx  Glsl.inl.8790110F067D2C35.idx  Rect.hpp.7AEC57EE8F0C2E65.idx  (+58 more)
gui/board/: CMakeLists.txt  add.txt  bindings.cpp  game.py  game1.py  mine.py  vols.py  vols1.py  vols2.py  vols3.py
gui/board/virt/: pyvenv.cfg
gui/game/: activate.txt  main.py
include/: volsweeper.hpp
setup/: req.txt
src/: .botV1.cpp.swp  .volsweeper.cpp.swp  bindings.cpp  botV1.cpp  game.cpp  gameplan.md  volsweeper.cpp  volsweeper.hpp
testing/: game.cpp
